# AutotoolsDemos

DetectPlatform/: Makefile  Makefile.in  build.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  libtool
DetectPlatform/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
DetectPlatform/src/: Makefile  Makefile.am  Makefile.in  detectplatform.c
DetectPlatform/src/.deps/: detectplatform.Po
DetectPlatform/src/.libs/: detectplatform_ltshwrapper  lt-detectplatform.c
